Fixed problem with presigned url generation
Fixed problem with presigned url generation

Remove